src/Lampi/ParLampi.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Lampi.ParLampi
  ( happyError
  , myLexer
  , pProgram
  , pCommand
  , pListCommand
  , pTerm2
  , pTerm
  , pTerm1
  , pScopedTerm
  , pPattern
  ) where

import Prelude

import qualified Lampi.AbsLampi
import Lampi.LexLampi

}

%name pProgram_internal Program
%name pCommand_internal Command
%name pListCommand_internal ListCommand
%name pTerm2_internal Term2
%name pTerm_internal Term
%name pTerm1_internal Term1
%name pScopedTerm_internal ScopedTerm
%name pPattern_internal Pattern
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('        { PT _ (TS _ 1)       }
  ')'        { PT _ (TS _ 2)       }
  ','        { PT _ (TS _ 3)       }
  '.'        { PT _ (TS _ 4)       }
  ':'        { PT _ (TS _ 5)       }
  ';'        { PT _ (TS _ 6)       }
  '_'        { PT _ (TS _ 7)       }
  'check'    { PT _ (TS _ 8)       }
  'compute'  { PT _ (TS _ 9)       }
  '×'        { PT _ (TS _ 10)      }
  'Π'        { PT _ (TS _ 11)      }
  'λ'        { PT _ (TS _ 12)      }
  'π₁'       { PT _ (TS _ 13)      }
  'π₂'       { PT _ (TS _ 14)      }
  '→'        { PT _ (TS _ 15)      }
  '𝕌'        { PT _ (TS _ 16)      }
  L_VarIdent { PT _ (T_VarIdent _) }

%%

VarIdent :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.VarIdent) }
VarIdent  : L_VarIdent { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.VarIdent (tokenText $1)) }

Program :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.Program) }
Program
  : ListCommand { (fst $1, Lampi.AbsLampi.AProgram (fst $1) (snd $1)) }

Command :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.Command) }
Command
  : 'check' Term ':' Term { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.CommandCheck (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | 'compute' Term ':' Term { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.CommandCompute (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }

ListCommand :: { (Lampi.AbsLampi.BNFC'Position, [Lampi.AbsLampi.Command]) }
ListCommand
  : {- empty -} { (Lampi.AbsLampi.BNFC'NoPosition, []) }
  | Command ';' ListCommand { (fst $1, (:) (snd $1) (snd $3)) }

Term2 :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.Term) }
Term2
  : VarIdent { (fst $1, Lampi.AbsLampi.Var (fst $1) (snd $1)) }
  | '(' Term ')' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), (snd $2)) }

Term :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.Term) }
Term
  : 'Π' '(' Pattern ':' Term ')' '→' ScopedTerm { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.Pi (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $8)) }
  | 'λ' Pattern '.' ScopedTerm { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.Lam (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | Term1 '×' Term1 { (fst $1, Lampi.AbsLampi.Product (fst $1) (snd $1) (snd $3)) }
  | '(' Term ',' Term ')' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.Pair (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
  | 'π₁' '(' Term ')' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.First (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $3)) }
  | 'π₂' '(' Term ')' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.Second (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $3)) }
  | '𝕌' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.Universe (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1))) }
  | Term1 { (fst $1, (snd $1)) }

Term1 :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.Term) }
Term1
  : Term1 Term2 { (fst $1, Lampi.AbsLampi.App (fst $1) (snd $1) (snd $2)) }
  | Term2 { (fst $1, (snd $1)) }

ScopedTerm :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.ScopedTerm) }
ScopedTerm
  : Term { (fst $1, Lampi.AbsLampi.AScopedTerm (fst $1) (snd $1)) }

Pattern :: { (Lampi.AbsLampi.BNFC'Position, Lampi.AbsLampi.Pattern) }
Pattern
  : '_' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.PatternWildcard (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1))) }
  | VarIdent { (fst $1, Lampi.AbsLampi.PatternVar (fst $1) (snd $1)) }
  | '(' Pattern ',' Pattern ')' { (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1), Lampi.AbsLampi.PatternPair (uncurry Lampi.AbsLampi.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Lampi.AbsLampi.Program
pProgram = fmap snd . pProgram_internal

pCommand :: [Token] -> Err Lampi.AbsLampi.Command
pCommand = fmap snd . pCommand_internal

pListCommand :: [Token] -> Err [Lampi.AbsLampi.Command]
pListCommand = fmap snd . pListCommand_internal

pTerm2 :: [Token] -> Err Lampi.AbsLampi.Term
pTerm2 = fmap snd . pTerm2_internal

pTerm :: [Token] -> Err Lampi.AbsLampi.Term
pTerm = fmap snd . pTerm_internal

pTerm1 :: [Token] -> Err Lampi.AbsLampi.Term
pTerm1 = fmap snd . pTerm1_internal

pScopedTerm :: [Token] -> Err Lampi.AbsLampi.ScopedTerm
pScopedTerm = fmap snd . pScopedTerm_internal

pPattern :: [Token] -> Err Lampi.AbsLampi.Pattern
pPattern = fmap snd . pPattern_internal
}
